二进制实战部署/杭州I部署yaml/kubernetes/deploy_work/NV_STUDY/whoami/whoami-deployment-ingress.yaml
#ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: test-ns
  name: whoami-deployment-ingress
spec:
  rules:
  - host: nv.study.com
    http:
      paths:
      - path: /
        backend:
          serviceName: whoami-service
          servicePort: 80
      - path: /env/name
        backend:
          serviceName: springboot-service
          servicePort: 80
      - path: /env/addr
        backend:
          serviceName: springboot-service
          servicePort: 80
